add graphviz to technologies
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@695 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/jgralab/README
+++ b/jgralab/README
@@ -17,6 +17,7 @@ ordered, and directed graphs.
 * [[Technology:Eclipse]]: optional IDE (Version 3.4.1)
 * [[Technology:Ant]]: for building
 * [[Technology:JGraLab]]: the core of the TGraph technological space
+* [[Technology:GraphViz]]: graph visualization
 
 == Features ==
 
