git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@699 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/erlang/README
+++ b/erlang/README
@@ -17,7 +17,7 @@ an Erlang-based implementation
 * [[101feature:Company]]
 * [[101feature:Total]]
 * [[101feature:Cut]]
-* [[101feature:Fault tolerance]]
+* [[101feature:Availability]]
 
 == Motivation ==
 
@@ -25,7 +25,7 @@ Concurrency is implemented in a simple way. The company itself is a server proce
 
 == Architecture ==
 
-The code makes extensive use of the OTP (Open Telecom Platform). Aptly misnamed, this is a library of common concurrency tasks which most concurrent programs will use. Rather than writing code that uses the primitive send (`!`) and receive (`receive .. end`) constructs, these are wrapped in OTP.
+The code makes extensive use of the OTP (Open Telecom Platform). Aptly misnamed, this is a library of common concurrency tasks which most concurrent programs will use. Rather than writing code that uses the primitive send (''!'') and receive (''receive .. end'') constructs, these are wrapped in OTP.
 
 A common OTP idiom is that OTP provides a *generic* version of a task, a server, a supervisor, and so on. This generic version is then specialized by injecting the name of a module. Whenever specific hook points in the generic server is reached, a callback is made to the module according to a protocol. Thus our code is call-backed to handle the specialization. A consequence as that we don't have to handle all the gritty parts of message passing concurrency.
 
@@ -37,7 +37,7 @@ The code consist of several modules:
 
 * ''meganalysis_sup'': Provides the callbacks for the generic ''supervisor'' construction. The supervisor is built to mostly live in hibernation supervising concrete workers. If the worker dies due to a program error or some unforseen event, then the supervisor will restart its worker according to some rules. We use the ''one_for_one'' strategy here, but there are several possible. If the worker crashes too often however, the supervisor itself dies. This trigger application death in our case, but usually a nested tree of supervisors can withstand supervisor crashes as the error usually only propagates up the tree to a certain point.
 
-* ''meganalysis_process'': A generic server implementation. That is, we provide a set of callbacks for the ''gen_server'' OTP generic server *behaviour*. Note that we export a neat interface which hides the ''gen_server'' parts. Specifically, we export ''total()'' and ''cut()''. Total is a *call* meaning that it is synchronous. A caller will wait on the server to return an answer. Cut is a *cast* on the other hand. It is asynchronous and the caller is not going to wait on its completion. The `handle_*` parts are the protocol for the ''gen_server'' callbacks. That is actually doing the meat of the work.
+* ''meganalysis_process'': A generic server implementation. That is, we provide a set of callbacks for the ''gen_server'' OTP generic server *behaviour*. Note that we export a neat interface which hides the ''gen_server'' parts. Specifically, we export ''total()'' and ''cut()''. Total is a *call* meaning that it is synchronous. A caller will wait on the server to return an answer. Cut is a *cast* on the other hand. It is asynchronous and the caller is not going to wait on its completion. The ''handle_*'' parts are the protocol for the ''gen_server'' callbacks. That is actually doing the meat of the work.
 
 * ''meganalysis'': It is common to provide a nice API to the rest of the Erlang system, to hide the complexities of processes. An user of the application will only use this API to work with the application. Thus, we decouple the internal design of the application with its interface.
 
@@ -49,9 +49,9 @@ First, in order to run this code, you need three tools:
 
 * Make, preferably GNU make, though the makefile should be BSD-make compatible. It can be skipped if you want. The Makefiles only serves as a canonical interface that makes Emacs and Vim's build-triggers work nicely.
 
-* A Recent Erlang/OTP distribution. I used R14B02, but anything from R13B04 and up ought to work for this. Avoid R14A if possible. It is a beta-release.
+* A Recent Erlang/OTP distribution. Tested with R14B02, but anything from R13B04 and up ought to work for this. Avoid R14A if possible. It is a beta-release.
 
-* Rebar. Rebar is an Erlang build tool. It is available from https://github.com/basho/rebar When rebar has been boot-strapped, you place it into your path after which you have access to a build system that is bearable to work with.
+* [[Technology:Rebar]]: Rebar is an Erlang build tool. When rebar has been boot-strapped, you place it into your path after which you have access to a build system that is bearable to work with.
 
 === Building ===
 
@@ -96,6 +96,6 @@ Here are some ideas for possible advancements:
 * Parallelize the work done.
 * Improve roboustness.
 
-== Contributor ==
+== Contributors ==
 
 * [[Contributor:Jesper Louis Andersen]]
