git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@718 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/seam/README
+++ b/seam/README
@@ -8,7 +8,7 @@ illustrate building of web applications with Seam
 
 	JBOSS-4.2.x (http://sourceforge.net/projects/jboss/files/JBoss/JBoss-4.2.3.GA)
 
-== Build === 
+=== Build === 
 
 	(a) change the build.properties file, reviewing the jboss.home property that must refer 
 	to the place where you have installed the jboss distribution. 
