git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@739 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/hadoop/README
+++ b/hadoop/README
@@ -63,6 +63,4 @@ Instructions how to do this can be found for example here: http://www.maths.qmul
 
 == Contributors ==
 
-* [[Contributor:Ralf LŠmmel]]
-* [[Contributor:Thomas Schmorleiz]]
-* [[Contributor:Betim Sojeva]]
+* {{101contributor|David Saile|developer}}
