git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@742 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/aspectJ/README
+++ b/aspectJ/README
@@ -57,5 +57,5 @@ package ''org.softlang.aspectj.tests'' hosts JUnit tests; see below.
 
 == Contributors ==
 
-* [[Contributor:Ralf Lämmel]]
-* [[Contributor:Thomas Schmorleiz]]
+* {{101contributor|Ralf Lämmel|developer}}
+* {{101contributor|Thomas Schmorleiz|developer}}
