git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@744 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/clojure/README
+++ b/clojure/README
@@ -29,4 +29,6 @@ To run a demo:
 * Type "(totalCompany meganalysis)" or "(totalCompany (cutCompany meganalysis))" to cut and total the sample company's salaries.
 
 == Contributors ==
-* Thomas Schmorleiz
+
+* {{101contributor|Thomas Schmorleiz|developer}}
+* {{101contributor|Ralf Lämmel|user}}
