--- a/cobol/README
+++ b/cobol/README
@@ -46,4 +46,4 @@ It would be interesting to provide a Cobol-like user interface.
 
 == Contributors ==
 
-* [[Contributor:Ralf Lämmel]]
+* {{101contributor|Ralf Lämmel|developer}}
