--- a/erlang/README
+++ b/erlang/README
@@ -98,4 +98,4 @@ Here are some ideas for possible advancements:
 
 == Contributors ==
 
-* [[Contributor:Jesper Louis Andersen]]
+* {{101contributor|Jesper Louis Andersen|developer}}
