--- a/csharp/README
+++ b/csharp/README
@@ -35,4 +35,5 @@ The project itself is a class-library and compiles into a DLL. To run a project 
 Nunit GUI or other Visual studio extension (e.g. Resharper) should be used for executing unit tests.
 
 == Contributors ==
-* [[Contributor:Andrei Varanovich]]
+
+* {{101contributor|Andrei Varanovich|developer}}
