git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@746 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/fsharp/README
+++ b/fsharp/README
@@ -1,4 +1,4 @@
-﻿== Summary ==
+== Summary ==
 F# based object model for 101companies
 
 == Description == 
@@ -16,5 +16,6 @@ and under <runtime> add:
 
 
 == Contributors ==
-* Andrei Varanovich
+
+* {{101contributor|Andrei Varanovich|developer}}
 
