--- a/gwt/README
+++ b/gwt/README
@@ -61,4 +61,5 @@ These services allow the client to load and save data and perform scenarios [[10
 
 == Contributors ==
 
-* [[Contributor:Thomas Schmorleiz]]
+* {{101contributor|Thomas Schmorleiz|developer}}
+* {{101contributor|Ralf Lämmel|reviewer}}
