--- a/hibernate2/README
+++ b/hibernate2/README
@@ -103,7 +103,8 @@ Hence the line should be commented out.
 
 == Contributors ==
 
-* [[Contributor:Thomas Schmorleiz]]
+* {{101contributor|Thomas Schmorleiz|developer}}
+* {{101contributor|Ralf Lämmel|reviewer}}
 
 == Issues == 
 
