--- a/hibernate/README
+++ b/hibernate/README
@@ -101,7 +101,8 @@ Hence the line should be commented out.
 
 == Contributors ==
 
-* [[Contributor:Thomas Schmorleiz]]
+* {{101contributor|Thomas Schmorleiz|developer}}
+* {{101contributor|Ralf Lämmel|reviewer}}
 
 == Issues == 
 
