git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@747 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/jdbc/README
+++ b/jdbc/README
@@ -16,6 +16,11 @@ Prerequisites:
   An appropriate driver is available through the project "library".
   See the corresponding JAR in the build path of the present project. 
   
+== Contributors ==
+
+* {{101contributor|Thomas Schmorleiz|developer}}
+* {{101contributor|Ralf Lämmel|reviewer}}
+
 
 == Issues ==
 
