--- a/jena/README
+++ b/jena/README
@@ -19,3 +19,9 @@ Package ...company
 We provide a builder for company RDF models.
 We also show construction code for a sample company.
 The rest of the code uses the sample stored in .rdf file stored in the root dir.
+
+
+== Contributors ==
+
+* {{101contributor|Thomas Schmorleiz|developer}}
+* {{101contributor|Ralf Lämmel|user}}
