--- a/jgralab/README
+++ b/jgralab/README
@@ -76,7 +76,8 @@ Here are some minor issues that could be normalized/improved:
 ** See [[101feature:Mentoring]].
 ** See prepared test testAddMentorNotOk.
 
+
 == Contributors ==
 
-* [[Contributor:Tassilo Horn]]
-* [[Contributor:Mahdi Derakhshanmanesh]]
+* {{101contributor|Tassilo Horn|developer}}
+* {{101contributor|Mahdi Derakhshanmanesh|developer}}
