git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@748 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/mobl/README
+++ b/mobl/README
@@ -23,5 +23,6 @@ open http://localhost:8080/companies.html in your browser.
 
 == Contributors ==
 
-* [[Contributor:Zef Hemel]]
-* [[Contributor:Thomas Schmorleiz]]
+* {{101contributor|Thomas Schmorleiz|developer}}
+* {{101contributor|Zef Hemel|developer}}
+* {{101contributor|Ralf Lämmel|reviewer}}
