--- a/mps/README
+++ b/mps/README
@@ -4,5 +4,5 @@ an implementation based on [[Technology:MPS]]
 
 == Contributors ==
 
-* [[Contributor:Thiago Tonelli Bartolomei]]
-* [[Contributor:Ralf Lämmel]]
+* {{101contributor|Thiago Tonelli Bartolomei|developer}}
+* {{101contributor|Ralf Lämmel|developer}}
