--- a/scala/README
+++ b/scala/README
@@ -43,5 +43,6 @@ to run the tests.
 
 == Contributors ==
 
-* [[Contributor:Thomas Schmorleiz]] - initial implementation
-* [[Contributor:Sebastian Jackel]] - general overhaul
+* {{101contributor|Thomas Schmorleiz|developer}}
+* {{101contributor|Sebastian Jackel|developer}}
+* {{101contributor|Ralf Lämmel|user}}
