git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@749 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/mobl/README
+++ b/mobl/README
@@ -25,4 +25,4 @@ open http://localhost:8080/companies.html in your browser.
 
 * {{101contributor|Thomas Schmorleiz|developer}}
 * {{101contributor|Zef Hemel|developer}}
-* {{101contributor|Ralf Lämmel|reviewer}}
+* {{101contributor|Ralf Lämmel|user}}
