--- a/seam/README
+++ b/seam/README
@@ -31,5 +31,5 @@ illustrate building of web applications with Seam
  	
 == Contributors ==
 
-* [[Contributor:Rodrigo Bonifacio]] 
+* {{101contributor|Rodrigo Bonifacio|developer}}
 
