--- a/swing/README
+++ b/swing/README
@@ -24,6 +24,5 @@ Run Interaction.java to start the GUI for the sample company.
 
 == Contributors ==
 
-* [[Contributor:Ralf Lämmel]]
-* [[Contributor:Thomas Schmorleiz]]
-* [[Contributor:Betim Sojeva]]
+* {{101contributor|Thomas Schmorleiz|developer}}
+* {{101contributor|Ralf Lämmel|developer}}
