--- a/xslt/README
+++ b/xslt/README
@@ -102,5 +102,6 @@ The project can be opened with Eclipse for convenience.
 
 == Contributors ==
 
-* [[Contributor:Ralf Lämmel]]
-* [[Contributor:Vadim Zaytsev]]
+* {{101contributor|Ralf Lämmel|developer}}
+* {{101contributor|Vadim Zaytsev|developer}}
+
