--- a/webDSL/README
+++ b/webDSL/README
@@ -26,7 +26,7 @@ We make use of the WebDSL Plugin. Update Site: http://webdsl.org/page/Download
 (Eventually you will have to re-build or restart the server)
 
 == Contributors ==
-* Thomas Schmorleiz
 
-
+* {{101contributor|Thomas Schmorleiz|developer}}
+* {{101contributor|Ralf Lämmel|user}}
 
