--- a/xquery/README
+++ b/xquery/README
@@ -80,5 +80,5 @@ The project can be opened with Eclipse for convenience.
 		
 == Contributors ==
 
-* [[Contributor:Ralf Lämmel]]
-* [[Contributor:Vadim Zaytsev]]
+* {{101contributor|Ralf Lämmel|developer}}
+* {{101contributor|Vadim Zaytsev|developer}}
