git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@750 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/webDSL/README
+++ b/webDSL/README
@@ -30,3 +30,7 @@ We make use of the WebDSL Plugin. Update Site: http://webdsl.org/page/Download
 * {{101contributor|Thomas Schmorleiz|developer}}
 * {{101contributor|Ralf Lämmel|user}}
 
+== Acknowlegdement ==
+
+[[101contributor:Eelco Visser]] provided some basic advice on the usage of WebDSL.
+
