git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@751 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/webDSL/README
+++ b/webDSL/README
@@ -32,5 +32,5 @@ We make use of the WebDSL Plugin. Update Site: http://webdsl.org/page/Download
 
 == Acknowlegdement ==
 
-[[101contributor:Eelco Visser]] provided some basic advice on the usage of WebDSL.
+{{101contributor|Eelco Visser|supporter}} provided some basic advice on the usage of WebDSL.
 
