--- a/webDSL/README
+++ b/webDSL/README
@@ -27,10 +27,11 @@ We make use of the WebDSL Plugin. Update Site: http://webdsl.org/page/Download
 
 == Contributors ==
 
+* {{101contributor|Eelco Visser|supporter}}
 * {{101contributor|Thomas Schmorleiz|developer}}
 * {{101contributor|Ralf Lämmel|user}}
 
 == Acknowlegdement ==
 
-{{101contributor|Eelco Visser|supporter}} provided some basic advice on the usage of WebDSL.
+Eelco Visser provided some basic advice on the usage of WebDSL.
 
