git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@754 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/webDSL/README
+++ b/webDSL/README
@@ -27,7 +27,7 @@ We make use of the WebDSL Plugin. Update Site: http://webdsl.org/page/Download
 
 == Contributors ==
 
-* {{101contributor|Eelco Visser|supporter}}
+* {{101contributor|Eelco Visser|assistant}}
 * {{101contributor|Thomas Schmorleiz|developer}}
 * {{101contributor|Ralf Lämmel|user}}
 
