git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@758 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/erlang/README
+++ b/erlang/README
@@ -17,7 +17,7 @@ an Erlang-based implementation
 * [[101feature:Company]]
 * [[101feature:Total]]
 * [[101feature:Cut]]
-* [[101feature:Availability]]
+* [[101feature:Fault tolerance]]
 
 == Motivation ==
 
