git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@775 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/hadoop/README
+++ b/hadoop/README
@@ -19,6 +19,7 @@ a simple implementation in [[Language:Java for Hadoop]]
 * [[101feature:Total]]
 * [[101feature:Cut]]
 * [[101feature:Serialization]]
+* [[101feature:Parallelism]]
 
 == Motivation ==
 
