--- a/gwt/README
+++ b/gwt/README
@@ -23,7 +23,7 @@ A simple C/S [[Web Application|WebApp]] for companies
 * [[101feature:Company]]
 * [[101feature:Total]]
 * [[101feature:Cut]]
-* [[101feature:Persistence]]
+* [[101feature:Distribution]]
 
 == Motivation ==
 
