git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@786 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/ef/README
+++ b/ef/README
@@ -13,12 +13,15 @@ object [[persistence]] and [[O/R mapping]] with [[Technology:.NET]] [[Technology
 * [[Technology:SQL Server]]: SQL Server 2008 used as a data storage. (Free Express edition is enough)
 
 == Features ==
-* [[101feature:Company]] (generated from [[101implementation:sqlServer]] data model)
+
+* [[101feature:Company]]
 * [[101feature:Total]]
 * [[101feature:Cut]]
 * [[101feature:Depth]]
+* [[101feature:Persistence]]
 
 == Motivation ==
+
 Entity Framework object model is generated for SQL Server representation of 101companies model. 
 
 == Architecture ==
