--- a/gwt/README
+++ b/gwt/README
@@ -23,6 +23,7 @@ A simple C/S [[Web Application|WebApp]] for companies
 * [[101feature:Company]]
 * [[101feature:Total]]
 * [[101feature:Cut]]
+* [[101feature:Interaction]]
 * [[101feature:Distribution]]
 
 == Motivation ==
